--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -261,7 +261,7 @@
     "name": "名称",
     "set_name_and_desc": "{parcel_name}の任意の名称と説明を設定して下さい。",
     "warning_tooltip":
-      "変更はあなたのシーンに反映されます。実行する前にもう一度確認して下さい。"
+      "あなたのシーンを反映する為に使用されます。必要な場合のみ更新して下さい。"
   },
   "parcel_manage": {
     "address": "編集者のアドレス",
