--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -101,7 +101,7 @@
     "connecting": "接続しています",
     "continue": "続ける",
     "contributions": "貢献用",
-    "created_at": "{date}に作成済",
+    "created_at": "{date}に作成済み",
     "edit": "編集",
     "estate": "不動産",
     "estates": "不動産",
