feat: transfer estates (#338)
* feat: transfer estates

* refactor: naming & remove !important

* fix: translations

* fix: navbar top position & parcelId arg

--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -72,7 +72,8 @@
     "detail": "不動産の詳細",
     "edit_selection": "地図上のパーセルを選択する",
     "new_selection": "新しい不動産のパーセルを地図から選択してください。",
-    "tx_to_be_send": "トランザクションを{action}したパーセル{parcels}へ送信します。"
+    "tx_to_be_send":
+      "トランザクションを{action}したパーセル{parcels}へ送信します。"
   },
   "footer": {
     "color_key": "カラーガイド",
@@ -93,6 +94,7 @@
     "blog": "ブログ",
     "cancel": "キャンセル",
     "change": "変更",
+    "check_address": "アドレスを慎重に確認してください",
     "clear": "履歴を削除",
     "click_here": "こちらをクリック",
     "community_chat": "コミュニティーチャット",
@@ -113,12 +115,14 @@
     "marketplace": "マーケット",
     "mortgage": "担保",
     "mortgages": "担保",
+    "own_address_warning": "それはあなた自身のアドレスです！",
     "owned_by": "所有者",
     "owned_by_link": "所有者：{address_link}",
     "paid_at": "支払済み",
     "parcels": "パーセル区画",
     "profile": "マイランド",
     "publications": "公開中のパーセル",
+    "recipient_address": "受信者アドレス",
     "remove": "削除する",
     "removed": "削除済",
     "request": "リクエスト",
@@ -131,7 +135,10 @@
     "sign_in_notice":
       "アクセスするには、こちらで{sign_in_link}サインインする必要があります。",
     "submit": "送信",
+    "the_estate": "不動産",
+    "the_parcel": "小包",
     "time_left": "残り時間",
+    "transfer_irreversible": "転送は元に戻すことができません。",
     "unauthorized": "未認証",
     "undo": "戻す",
     "wallet_address": "ウォレットアドレス",
@@ -267,7 +274,6 @@
     "address": "編集者のアドレス",
     "address_permission":
       "このアドレスの持ち主が指定されたパーセルのコンテンツを更新できるようになります。",
-    "check_address": "もう一度アドレスを確認して下さい。",
     "give_permission": "{parcel_name}の更新権限を与える.",
     "manage_land": "ランドを管理"
   },
@@ -354,10 +360,12 @@
     "buy": "{parcel_link}を購入しました。",
     "buy_mana": "{mana} MANAを購入しました。",
     "cancel": "{parcel_link}の{publication_link}の公開をキャンセルしました。",
-    "cancel_mortgage": "パーセル{parcel_link}購入の為の担保をキャンセルしました。",
+    "cancel_mortgage":
+      "パーセル{parcel_link}購入の為の担保をキャンセルしました。",
     "claim_mortgage_resolution": "{parcel_link}へ請求しました。",
     "create_estate": "パーセル{parcels_link}に不動産を作成しました。",
-    "create_mortgage": "パーセル{parcel_link}を購入するのに担保を申請しました。",
+    "create_mortgage":
+      "パーセル{parcel_link}を購入するのに担保を申請しました。",
     "delete_estate": "不動産{estate_id}を削除しました。",
     "disapproved":
       "あなたは、マーケット上でMANAを使用することを{marketplace_contract_link}で承認していません。",
@@ -394,22 +402,21 @@
       "pending": "取引が承認されるのを待っています。"
     }
   },
+  "transfer_estate": {
+    "about_to_transfer": "不動産{estate_id}を移転しようとしています。",
+    "transfer_estate": "トランスファーエステート"
+  },
   "transfer_mana": {
     "action": "転送する",
     "amount": "金額",
     "current_balance": "現在の残高：{balance}",
     "irreversible":
       "MANAの転送はやり直すことができませんので、ご確認ください。",
-    "own_address_warning": "これはあなたのアドレスです!",
     "title": "MANAを転送する"
   },
   "transfer_parcel": {
     "about_to_transfer": "あなたは{parcel_name}を転送しようとしています。",
     "cant_transfer": "このランドは販売中であるため、転送できません。",
-    "check_address": "アドレスをもう一度確認してください",
-    "irreversible": "ランドの転送は元に戻すことができません。",
-    "own_address_warning": "それはあなた自身のアドレスです！",
-    "recipient_address": "受信者アドレス",
     "transfer_land": "転送ランド"
   }
 }
