--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -86,7 +86,6 @@
     "acquired_at": "Acquired at {date}",
     "activity": "Activity",
     "add": "add",
-    "added": "added",
     "address_placeholder": "0x...",
     "atlas": "Atlas",
     "authorized": "Authorized",
@@ -124,7 +123,6 @@
     "publications": "Publications",
     "recipient_address": "Recipient address",
     "remove": "remove",
-    "removed": "removed",
     "request": "Request",
     "retry": "Retry",
     "revoke": "Revoke",
@@ -366,7 +364,7 @@
     "cancel": "You cancelled the {publication_link} on {parcel_link}",
     "cancel_mortgage": "You cancel a Mortgage to buy the parcel {parcel_link}",
     "claim_mortgage_resolution": "You claimed {parcel_link}",
-    "create_estate": "You created a estate with the parcels {parcels_link}",
+    "create_estate": "You created an estate with the parcels {parcels_link}",
     "create_mortgage":
       "You requested a Mortgage to buy the parcel {parcel_link}",
     "delete_estate": "You deleted the estate {estate_id}",
@@ -376,8 +374,10 @@
       "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "edit_estate_metadata":
       "You edited estate {estate_id} with the name \"{name}\" and description \"{description}\"",
-    "edit_estate_parcels":
-      "You {action} parcels {parcels_link} to estate {estate_id}",
+    "edit_estate_parcels_added":
+      "You added parcels {parcels_link} to estate {estate_id}",
+    "edit_estate_parcels_removed":
+      "You removed parcels {parcels_link} from estate {estate_id}",
     "manage":
       "You gave {address_link} permission to update the contents of {parcel_link}",
     "manage_revoked":
