--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -87,7 +87,6 @@
     "acquired_at": "TK0에서 획득",
     "activity": "활동",
     "add": "더하다",
-    "added": "추가 된",
     "address_placeholder": "0x...",
     "atlas": "지도",
     "authorized": "허가",
@@ -125,7 +124,6 @@
     "publications": "간행물",
     "recipient_address": "수취인 주소",
     "remove": "풀다",
-    "removed": "제거 된",
     "request": "의뢰",
     "retry": "다시 해 보다",
     "revoke": "취소",
@@ -370,8 +368,10 @@
       "{parcel_link}을(를) \"{name}\" 이름 및 설명 \"{description}\" (으)로 수정했습니다.",
     "edit_estate_metadata":
       "이름이 \"{name}\"이고 설명이 \"{description}\"인 부동산 {estate_id}을 편집했습니다.",
-    "edit_estate_parcels":
-      "당신은 {parcels_link}을 부동산 {estate_id}에 소포합니다.",
+    "edit_estate_parcels_added":
+      "부동산 {estate_id}에 소포 {parcels_link}를 추가했습니다.",
+    "edit_estate_parcels_removed":
+      "부동산 {estate_id}에서 소포 {parcels_link}를 제거했습니다.",
     "manage":
       "{address_link}에게 {parcel_link}의 내용을 업데이트 할 수있는 권한을 주셨습니다.",
     "manage_revoked":
