--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -55,8 +55,8 @@
       "El derivation path es incorrecto. Debe seguir el siguiente patrón 44'/60|61'/x'/n"
   },
   "estate_detail": {
-    "delete": "Eliminar estado",
-    "delete_desc": "Vas a eliminar la propiedad {estate_id}",
+    "delete": "Eliminar Estado",
+    "delete_desc": "Vas a eliminar la propiedad {name}",
     "edit_parcels": "Editar paquetes",
     "parcels": "Parcelas incluidas",
     "pending_tx": "Esta propiedad"
