--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -414,8 +414,7 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer":
-      "Estás a punto de transferir la propiedad {estate_id}.",
+    "about_to_transfer": "Estás a punto de transferir la propiedad {name}.",
     "transfer_estate": "Transferir propiedad"
   },
   "transfer_mana": {
