--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -401,7 +401,7 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "부동산 {estate_id}을 양도하려합니다.",
+    "about_to_transfer": "부동산 {name}을 양도하려합니다.",
     "transfer_estate": "트랜스퍼 에스테이트"
   },
   "transfer_mana": {
