--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -57,7 +57,7 @@
   },
   "estate_detail": {
     "delete": "재산 삭제",
-    "delete_desc": "당신은 부동산 {estate_id}을 삭제하려고합니다.",
+    "delete_desc": "당신은 부동산 {name}을 삭제하려고합니다.",
     "edit_parcels": "소포 편집",
     "parcels": "소포 포함",
     "pending_tx": "이 재산"
@@ -401,7 +401,7 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "부동산 {estate_id}을 양도하려합니다.",
+    "about_to_transfer": "부동산 {name}을 양도하려합니다.",
     "transfer_estate": "트랜스퍼 에스테이트"
   },
   "transfer_mana": {
