--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -55,8 +55,8 @@
       "You have set a wrong derivation path for your wallet. Your derivation path must follow pattern 44'/60|61'/x'/n"
   },
   "estate_detail": {
-    "delete": "Delete estate",
-    "delete_desc": "You are going to delete the estate {estate_id}",
+    "delete": "Delete Estate",
+    "delete_desc": "You are going to delete the estate {name}",
     "edit_parcels": "Edit Parcels",
     "parcels": "Parcels included",
     "pending_tx": "This estate"
@@ -408,7 +408,7 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "You're about to transfer the estate {estate_id}.",
+    "about_to_transfer": "You're about to transfer the estate {name}.",
     "transfer_estate": "Transfer Estate"
   },
   "transfer_mana": {
