--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -57,7 +57,7 @@
   },
   "estate_detail": {
     "delete": "Supprimer la succession",
-    "delete_desc": "Vous allez supprimer le domaine {estate_id}",
+    "delete_desc": "Vous allez supprimer le domaine {name}",
     "edit_parcels": "Modifier les colis",
     "parcels": "Colis inclus",
     "pending_tx": "Ce domaine"
@@ -422,7 +422,7 @@
   },
   "transfer_estate": {
     "about_to_transfer":
-      "Vous êtes sur le point de transférer la succession {estate_id}.",
+      "Vous êtes sur le point de transférer la succession {name}.",
     "transfer_estate": "Transfert immobilier"
   },
   "transfer_mana": {
