--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -56,7 +56,7 @@
   },
   "estate_detail": {
     "delete": "删除遗产",
-    "delete_desc": "你要删除庄园{estate_id}",
+    "delete_desc": "你要删除庄园{name}",
     "edit_parcels": "编辑地块",
     "parcels": "包裹包括在内",
     "pending_tx": "这个庄园"
@@ -378,7 +378,7 @@
     }
   },
   "transfer_estate": {
-    "about_to_transfer": "你即将转移庄园{estate_id}。",
+    "about_to_transfer": "你即将转移庄园{name}。",
     "transfer_estate": "转让遗产"
   },
   "transfer_mana": {
