fiX: show estate names instead of ids in activity

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -364,20 +364,19 @@
     "cancel": "You cancelled the {publication_link} on {parcel_link}",
     "cancel_mortgage": "You cancel a Mortgage to buy the parcel {parcel_link}",
     "claim_mortgage_resolution": "You claimed {parcel_link}",
-    "create_estate": "You created an estate with the parcels {parcels_link}",
+    "create_estate": "You created the estate {name}",
     "create_mortgage":
       "You requested a Mortgage to buy the parcel {parcel_link}",
-    "delete_estate": "You deleted the estate {estate_id}",
+    "delete_estate": "You deleted the estate {name}",
     "disapproved":
       "You unauthorized the {marketplace_contract_link} to operate MANA on your behalf",
     "edit":
       "You edited {parcel_link} with the name \"{name}\" and description \"{description}\"",
     "edit_estate_metadata":
       "You edited estate {estate_id} with the name \"{name}\" and description \"{description}\"",
-    "edit_estate_parcels_added":
-      "You added parcels {parcels_link} to estate {estate_id}",
+    "edit_estate_parcels_added": "You added {amount} parcels to estate {name}",
     "edit_estate_parcels_removed":
-      "You removed parcels {parcels_link} from estate {estate_id}",
+      "You removed {amount} parcels from estate {name}",
     "manage":
       "You gave {address_link} permission to update the contents of {parcel_link}",
     "manage_revoked":
