--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -369,20 +369,18 @@
     "cancel_mortgage":
       "Usted cancela una hipoteca para comprar el paquete {parcel_link}",
     "claim_mortgage_resolution": "Usted afirmó {parcel_link}",
-    "create_estate": "Has creado una finca con los paquetes {parcels_link}",
+    "create_estate": "Usted creó la propiedad {name}",
     "create_mortgage":
       "Solicitó una hipoteca para comprar el paquete {parcel_link}",
-    "delete_estate": "Borraste la propiedad {estate_id}",
+    "delete_estate": "Borraste la propiedad {name}",
     "disapproved":
       "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
     "edit":
       "Has editado {parcel_link} con el nombre \"{name}\" y la descripción \"{description}\"",
     "edit_estate_metadata":
       "Editó el estado {estate_id} con el nombre \"{name}\" y la descripción \"{description}\"",
-    "edit_estate_parcels_added":
-      "Agregaste parcelas {parcels_link} a la propiedad {estate_id}",
-    "edit_estate_parcels_removed":
-      "Has eliminado parcelas {parcels_link} de la propiedad {estate_id}",
+    "edit_estate_parcels_added": "Agregaste {amount} parcelas a {name}",
+    "edit_estate_parcels_removed": "Has eliminado {amount} parcelas de {name}",
     "manage":
       "Le dio {address_link} permiso para actualizar el contenido de {parcel_link}",
     "manage_revoked":
