--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -365,20 +365,18 @@
     "cancel_mortgage":
       "パーセル{parcel_link}購入の為の担保をキャンセルしました。",
     "claim_mortgage_resolution": "{parcel_link}へ請求しました。",
-    "create_estate": "パーセル{parcels_link}に不動産を作成しました。",
+    "create_estate": "あなたは不動産{name}を作成しました",
     "create_mortgage":
       "パーセル{parcel_link}を購入するのに担保を申請しました。",
-    "delete_estate": "不動産{estate_id}を削除しました。",
+    "delete_estate": "あなたは不動産{name}を削除しました",
     "disapproved":
       "あなたは、マーケット上でMANAを使用することを{marketplace_contract_link}で承認していません。",
     "edit":
       "{parcel_link}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
     "edit_estate_metadata":
       "不動産{estate_id}の名称を\"{name}\"に、説明文を\"{description}\"に変更しました。",
-    "edit_estate_parcels_added":
-      "不動産{estate_id}に小包{parcels_link}を追加しました",
-    "edit_estate_parcels_removed":
-      "不動産{estate_id}から小包{parcels_link}を削除した",
+    "edit_estate_parcels_added": "不動産{name}に{amount}小包を追加しました",
+    "edit_estate_parcels_removed": "不動産{name}から{amount}小包を取り除いた",
     "manage":
       "{parcel_link}のコンテンツを更新する権限を{address_link}に与えました。",
     "manage_revoked":
